Fix no horizontal scrollbar

--- a/google2009.css
+++ b/google2009.css
@@ -292,6 +292,7 @@
     }
     
     body {
+        min-width: 1024px !important;
         max-width: 1024px !important;
         margin-left: 8px !important;
     }
